code workflow apis

--- a/.github/workflows/tutor_enable_plugin_credentials.yml
+++ b/.github/workflows/tutor_enable_plugin_credentials.yml
@@ -1,21 +1,29 @@
 #------------------------------------------------------------------------------
 # written by: mcdaniel
-# date: feb-2022
+# date: june-2022
 #
-# usage: deploy a Tutor-created openedx Docker image to the Kubernetes cluster.
-#        The openedx docker image is created by a Github action in tutor-build.git.
+# usage: Use tutor to enable the Open edX Credentials service plugin
+#        Called from tutor_deploy.yml
 #
-#        The general work flow in this action is:
-#        ----------------------------------------
-#        I.   Bootstrap the Github Actions Ubuntu instance.
-#        II.  Get backend services configuration data stored in Kubernetes secrets
-#        III. Configure Open edX by setting environment variables
-#        IV.  Merge all of the configuration data into Tutor's Open edX configuration files
-#        V.   Deploy Open edX into the Kubernetes cluster
+# FIX NOTE: move to Github Actions marketplace
 #------------------------------------------------------------------------------
 name: enable Credentials plugin for tutor
 
-on: [workflow_call]
+on:
+  workflow_call:
+  inputs:
+    environment-id:
+      description: 'The Open edX platform environment. Examples: prod, qa, dev'
+      required: true
+      type: string
+    namespace:
+      description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
+      required: true
+      type: string
+    openedx-common-version:
+      description: 'The named release of Open edX platform to deploy. Example: open-release/maple.3'
+      required: true
+      type: string
 
 jobs:
   deploy:
