--- a/.github/workflows/tutor_deploy.yml
+++ b/.github/workflows/tutor_deploy.yml
@@ -2,20 +2,43 @@
 # written by: mcdaniel
 # date: feb-2022
 #
-# usage: deploy a Tutor-created openedx Docker image to the Kubernetes cluster.
-#        The openedx docker image is created by a Github action in tutor-build.git.
-#
-#        The general work flow in this action is:
-#        ----------------------------------------
-#        I.   Bootstrap the Github Actions Ubuntu instance.
-#        II.  Get backend services configuration data stored in Kubernetes secrets
-#        III. Configure Open edX by setting environment variables
-#        IV.  Merge all of the configuration data into Tutor's Open edX configuration files
-#        V.   Deploy Open edX into the Kubernetes cluster
+# see:
+# https://docs.github.com/en/actions/using-workflows/reusing-workflows
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#onworkflow_callinputs
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#onworkflow_callsecrets
 #------------------------------------------------------------------------------
 name: Deploy to Kubernetes
 
-on: [workflow_call]
+on:
+  workflow_call:
+  inputs:
+    environment-id:
+      description: 'The Open edX platform environment. Examples: prod, qa, dev'
+      required: true
+      type: string
+    namespace:
+      description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
+      required: true
+      type: string
+    openedx-common-version:
+      description: 'The named release of Open edX platform to deploy. Example: open-release/maple.3'
+      required: true
+      type: string
+  secrets:
+    aws-key:
+      description: 'AWS IAM key'
+      required: true
+    aws-secret:
+      description: 'AWS IAM secret'
+      required: true
+    aws-ses-iam-key:
+      description: 'AWS SES IAM key'
+      required: false
+      default: 'SET-ME-PLEASE'
+    aws-ses-iam-secret:
+      description: 'AWS SES IAM secret'
+      required: false
+      default: 'SET-ME-PLEASE'
 
 jobs:
   deploy:
@@ -31,9 +54,21 @@ jobs:
 
       - name: Initialize environment
         uses: ./.github/workflows/tutor_deploy_init
+        with:
+          environment-id: prod
+          namespace: openedx-prod
+          openedx-common-version: open-release/maple.3
+          aws-key: ${{ secrets.aws-key }}
+          aws-secret: ${{ secrets.aws-secret }}
 
       - name: Enable Tutor plugins
-        ses: ./.github/workflows/tutor_enable_plugins
+        uses: ./.github/workflows/tutor_enable_plugins
+        with:
+          environment-id: ${{ inputs.environment-id }}
+          namespace: ${{ inputs.namespace }}
+          openedx-common-version: ${{ inputs.openedx-common-version }}
+          aws-key: ${{ secrets.aws-key }}
+          aws-secret: ${{ secrets.aws-secret }}
 
       # note that the Kubernetes additional config data is locally
       # stored in ci/tutor-deploy/environments/prod/k8s/
@@ -49,14 +84,10 @@ jobs:
       # and AWS is neurotic about any changes to the config.
       # ---------------------------------------------------------------------------------
       - name: Setup AWS SES over SMTP
-        run: |-
-          echo "TUTOR_RUN_SMTP=true" >> $GITHUB_ENV
-          tutor config save --set EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend" \
-                            --set EMAIL_HOST="email-smtp.us-east-2.amazonaws.com" \
-                            --set EMAIL_HOST_PASSWORD=${{ secrets.AWS_SES_IAM_SECRET }} \
-                            --set EMAIL_HOST_USER=${{ secrets.AWS_SES_IAM_KEY }} \
-                            --set EMAIL_PORT=587 \
-                            --set EMAIL_USE_TLS=true
+        uses: ./.github/workflows/tutor_configure_smtp
+        with:
+          aws-ses-iam-key: ${{ secrets.aws-ses-iam-key }}
+          aws-ses-iam-secret: ${{ secrets.aws-ses-iam-secret }}
 
 
       - name: Generate Tutor Config
