--- a/.github/workflows/tutor_deploy_init.yml
+++ b/.github/workflows/tutor_deploy_init.yml
@@ -11,14 +11,32 @@
 #------------------------------------------------------------------------------
 name: Init environment
 
-on: [workflow_call]
+on:
+  workflow_call:
+  inputs:
+    environment-id:
+      description: 'The Open edX platform environment. Examples: prod, qa, dev'
+      required: true
+      type: string
+    ${{ inputs.namespace }}:
+      description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
+      required: true
+      type: string
+    openedx-common-version:
+      description: 'The named release of Open edX platform to deploy. Example: open-release/maple.3'
+      required: true
+      type: string
+  secrets:
+    aws-key:
+      description: 'AWS IAM key'
+      required: true
+    aws-secret:
+      description: 'AWS IAM secret'
+      required: true
 
 jobs:
   reusable_workflow_job:
     runs-on: ubuntu-latest
-    env:
-      NAMESPACE: openedx-prod
-      OPENEDX_COMMON_VERSION: open-release/maple.3
 
     steps:
       - name: Checkout
@@ -78,7 +96,7 @@ jobs:
       - name: fetch Redis configuration from Kubernetes secrets
         run: |-
           echo "TUTOR_RUN_REDIS=false" >> $GITHUB_ENV
-          kubectl get secret redis -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+          kubectl get secret redis -n $${{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
 
 
       - name: Configure 3rd Party Authentication
@@ -100,7 +118,7 @@ jobs:
       # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/mysql/main.tf
       - name: fetch MySQL configuration from Kubernetes secrets
         run: |-
-          kubectl get secret mysql-root -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+          kubectl get secret mysql-root -n $${{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
 
       #------------------------------------------------------------------------
       # II. Get all of our backend configuration data that was stored in
@@ -108,14 +126,14 @@ jobs:
       #------------------------------------------------------------------------
       - name: Configure Open edX version
         run: |-
-          echo "OPENEDX_COMMON_VERSION=$OPENEDX_COMMON_VERSION" >> $GITHUB_ENV
+          echo "${{ inputs.openedx-common-version }}=$${{ inputs.openedx-common-version }}" >> $GITHUB_ENV
 
       # retrieve the Open edX JWT token that we created with Terraform and
       # then stored in Kubernetes secrets
       # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/kubernetes_secrets/main.tf
       - name: Fetch JWT token
         run: |-
-          kubectl get secret jwt -n $NAMESPACE -o json |  jq  '.data| map_values(@base64d)'  | jq -r 'keys[] as $k | "\(.[$k])"' > jwt_private_key
+          kubectl get secret jwt -n $${{ inputs.namespace }} -o json |  jq  '.data| map_values(@base64d)'  | jq -r 'keys[] as $k | "\(.[$k])"' > jwt_private_key
 
       - nam: Generate JWT private key
         run: |-
@@ -144,11 +162,11 @@ jobs:
       # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/kubernetes_secrets/main.tf
       - name: fetch EDX Secret Key from Kubernetes secrets
         run: |-
-          kubectl get secret edx-secret-key -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+          kubectl get secret edx-secret-key -n $${{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
 
       - name: Load environment specific settings (direct)
         run: |-
-          # Pin the instalation ID with the Kubernetes namespace. It needs to be unique and static per instalation.
+          # Pin the instalation ID with the Kubernetes ${{ inputs.namespace }}. It needs to be unique and static per instalation.
           cat ci/tutor-deploy/environments/$ENVIRONMENT_ID/config.yml >> $GITHUB_ENV
 
       # note that values like $LMS_HOSTNAME come from this repo
@@ -157,10 +175,10 @@ jobs:
         run: |-
           # We don't want to run these services as we are using the Kubernetes ingress instead.
           echo "TUTOR_RUN_MYSQL=false" >> $GITHUB_ENV
-          echo "TUTOR_ID=tutor-$NAMESPACE" >> $GITHUB_ENV
+          echo "TUTOR_ID=tutor-$${{ inputs.namespace }}" >> $GITHUB_ENV
           echo "TUTOR_LMS_HOST=$LMS_HOSTNAME" >> $GITHUB_ENV
           echo "TUTOR_CMS_HOST=$CMS_HOSTNAME" >> $GITHUB_ENV
-          echo "TUTOR_K8S_NAMESPACE=$NAMESPACE" >> $GITHUB_ENV
+          echo "TUTOR_K8S_${{ inputs.namespace }}=$${{ inputs.namespace }}" >> $GITHUB_ENV
           echo "TUTOR_DOCKER_IMAGE_OPENEDX=$DOCKER_IMAGE_OPENEDX" >> $GITHUB_ENV
           echo "TUTOR_RUN_CADDY=false" >> $GITHUB_ENV
           echo "TUTOR_RUN_NGINX=false" >> $GITHUB_ENV
