--- a/.github/workflows/tutor_enable_plugin_notes.yml
+++ b/.github/workflows/tutor_enable_plugin_notes.yml
@@ -1,13 +1,29 @@
 #------------------------------------------------------------------------------
 # written by: mcdaniel
-# date: feb-2022
+# date: june-2022
 #
-# usage: enable Discussion Forum for deployment to Kubernetes cluster
+# usage: Use tutor to enable the Open edX Notes service plugin
+#        Called from tutor_deploy.yml
 #
+# FIX NOTE: move to Github Actions marketplace
 #------------------------------------------------------------------------------
 name: enable Notes plugin for tutor
 
-on: [workflow_call]
+on:
+  workflow_call:
+  inputs:
+    environment-id:
+      description: 'The Open edX platform environment. Examples: prod, qa, dev'
+      required: true
+      type: string
+    namespace:
+      description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
+      required: true
+      type: string
+    openedx-common-version:
+      description: 'The named release of Open edX platform to deploy. Example: open-release/maple.3'
+      required: true
+      type: string
 
 jobs:
   reusable_workflow_job:
