--- a/.github/workflows/tutor_enable_plugin_s3.yml
+++ b/.github/workflows/tutor_enable_plugin_s3.yml
@@ -1,21 +1,23 @@
 #------------------------------------------------------------------------------
 # written by: mcdaniel
-# date: feb-2022
+# date: june-2022
 #
-# usage: deploy a Tutor-created openedx Docker image to the Kubernetes cluster.
-#        The openedx docker image is created by a Github action in tutor-build.git.
+# usage: Use tutor to enable the hastexo AWS S3 plugin
+#        Called from tutor_deploy.yml
 #
-#        The general work flow in this action is:
-#        ----------------------------------------
-#        I.   Bootstrap the Github Actions Ubuntu instance.
-#        II.  Get backend services configuration data stored in Kubernetes secrets
-#        III. Configure Open edX by setting environment variables
-#        IV.  Merge all of the configuration data into Tutor's Open edX configuration files
-#        V.   Deploy Open edX into the Kubernetes cluster
+# FIX NOTE: move to Github Actions marketplace
 #------------------------------------------------------------------------------
 name: enable S3 plugin for tutor
 
-on: [workflow_call]
+on:
+  workflow_call:
+  secrets:
+    aws-key:
+      description: 'AWS IAM key'
+      required: true
+    aws-secret:
+      description: 'AWS IAM secret'
+      required: true
 
 jobs:
   deploy:
@@ -65,8 +67,8 @@ jobs:
           pip install git+https://github.com/hastexo/tutor-contrib-s3@v0.2.2
           tutor plugins enable s3
 
-          tutor config save --set OPENEDX_AWS_ACCESS_KEY="$OPENEDX_AWS_ACCESS_KEY" \
-                            --set OPENEDX_AWS_SECRET_ACCESS_KEY="$OPENEDX_AWS_SECRET_ACCESS_KEY" \
+          tutor config save --set OPENEDX_AWS_ACCESS_KEY="${{ secrets.aws-key }}" \
+                            --set OPENEDX_AWS_SECRET_ACCESS_KEY="${{ secrets.aws-secret }}" \
                             --set OPENEDX_AWS_QUERYSTRING_AUTH="False" \
                             --set OPENEDX_AWS_S3_SECURE_URLS="False" \
                             --set S3_STORAGE_BUCKET="$S3_STORAGE_BUCKET" \
