--- a/.github/workflows/tutor_enable_plugin_xqueue.yml
+++ b/.github/workflows/tutor_enable_plugin_xqueue.yml
@@ -1,13 +1,16 @@
 #------------------------------------------------------------------------------
 # written by: mcdaniel
-# date: feb-2022
+# date: june-2022
 #
-# usage: enable Discussion Forum for deployment to Kubernetes cluster
+# usage: Use tutor to enable the Open edX Xqueue service plugin
+#        Called from tutor_deploy.yml
 #
+# FIX NOTE: move to Github Actions marketplace
 #------------------------------------------------------------------------------
 name: enable Xqueue plugin for tutor
 
-on: [workflow_call]
+on:
+  workflow_call:
 
 jobs:
   reusable_workflow_job:
