--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Test init
-        uses: ./.github/workflows/tutor/deploy/tutor_deploy_init
+      - uses: ./.github/workflows/tutor/deploy/tutor_deploy_init
         with:
           environment-id: prod
           namespace: openedx-prod
