--- a/.github/workflows/tutor/deploy/tutor_deploy.yml
+++ b/.github/workflows/tutor/deploy/tutor_deploy.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v3.0.2
 
       - name: Initialize environment
-        uses: ./.github/workflows/tutor/deploy/tutor_deploy_init
+      - uses: ./.github/workflows/tutor/deploy/tutor_deploy_init
         with:
           environment-id: prod
           namespace: openedx-prod
@@ -62,7 +62,7 @@ jobs:
           aws-secret: ${{ secrets.aws-secret }}
 
       - name: Enable Tutor plugins
-        uses: ./.github/workflows/tutor/deloy/plugins/tutor_enable_plugins
+      - uses: ./.github/workflows/tutor/deloy/plugins/tutor_enable_plugins
         with:
           environment-id: ${{ inputs.environment-id }}
           namespace: ${{ inputs.namespace }}
@@ -74,7 +74,7 @@ jobs:
       # stored in ci/tutor-deploy/environments/prod/k8s/
       # in Kubernetes manifest yaml format
       - name: Create Kubernetes add-on resources
-        run:  |-
+      - run:  |-
           # Create kubernetes ingress and other environment resources
           kubectl apply -f "ci/tutor-deploy/environments/$ENVIRONMENT_ID/k8s"
 
@@ -84,14 +84,14 @@ jobs:
       # and AWS is neurotic about any changes to the config.
       # ---------------------------------------------------------------------------------
       - name: Setup AWS SES over SMTP
-        uses: ./.github/workflows/tutor/deploy/backend/tutor_configure_smtp
+      - uses: ./.github/workflows/tutor/deploy/backend/tutor_configure_smtp
         with:
           aws-ses-iam-key: ${{ secrets.aws-ses-iam-key }}
           aws-ses-iam-secret: ${{ secrets.aws-ses-iam-secret }}
 
 
       - name: Generate Tutor Config
-        run:  |-
+      - run:  |-
           export TUTOR_JWT_RSA_PRIVATE_KEY=\'$(sed -E 's/$/\n/g' ./jwt_private_key)\'
           tutor config save
           cat $TUTOR_ROOT/config.yml
@@ -106,7 +106,7 @@ jobs:
       # 3. LMS and CMS application configuration data stored in our repo at ci/tutor-deploy/environments/prod/settings_merge.json
       #------------------------------------------------------------------------
       - name: Patch Generated Configuration (Static)
-        run:  |-
+      - run:  |-
           echo "config.yml full path: $(tutor config printroot)/config.yml"
           cat "$(tutor config printroot)/config.yml"
           echo ""
