--- a/.github/workflows/prod_build.yml
+++ b/.github/workflows/prod_build.yml
@@ -37,27 +37,27 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Configure AWS credentials
-      - uses: aws-actions/configure-aws-credentials@v1.6.1
+        uses: aws-actions/configure-aws-credentials@v1.6.1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${AWS_REGION}
 
       - name: Build Backup
-      - uses: ./.github/workflows/tutor/build/tutor_build_backup
+        uses: ./.github/workflows/tutor/build/tutor_build_backup
 
       - name: Build Credentials
-      - uses: ./.github/workflows/tutor/build/tutor_build_credentials
+        uses: ./.github/workflows/tutor/build/tutor_build_credentials
 
       - name: Build MFE
-      - uses: ./.github/workflows/tutor/build/tutor_build_mfe
+        uses: ./.github/workflows/tutor/build/tutor_build_mfe
         with:
           subdomain: ${SUBDOMAIN}
           domain-name: ${DOMAIN_NAME}
           site-name: ${SITE_NAME}
 
       - name: Build openedx
-      - uses: ./.github/workflows/tutor/build/tutor_build_openedx
+        uses: ./.github/workflows/tutor/build/tutor_build_openedx
         with:
           custom-theme-repository: ${{ inputs.custom-theme-repository }}
           custom-theme-repository-ref: ${{ inputs.custom-theme-repository-ref }}
