--- a/.github/workflows/tutor/deploy/tutor_deploy_init/action.yml
+++ b/.github/workflows/tutor/deploy/tutor_deploy_init/action.yml
@@ -58,6 +58,7 @@ runs:
       run: |-
         sudo snap install kubectl --channel=1.23/stable --classic
         aws eks --region us-east-2 update-kubeconfig --name mrionline-global-live --alias eks-prod
+      shell: bash
 
     # dump version information for aws cli and kubectl to the console
     - name: Check environments versions
@@ -67,6 +68,7 @@ runs:
         echo
         echo "aws cli version:"
         aws --version
+      shell: bash
 
     # install the latest version of python3 which is a prerequisite for running Tutor
     - name: Setup Python
@@ -79,6 +81,7 @@ runs:
         echo "TUTOR_ROOT=$GITHUB_WORKSPACE/tutor" >> $GITHUB_ENV
         pip install tutor
         echo "TUTOR_VERSION=$(tutor --version | cut -f3 -d' ')" >> $GITHUB_ENV
+      shell: bash
 
     # retrieve the Redis connection parameter that we created in Terraform:
     #   REDIS_HOST: redis.app.mrionline.com
@@ -88,12 +91,14 @@ runs:
       run: |-
         echo "TUTOR_RUN_REDIS=false" >> $GITHUB_ENV
         kubectl get secret redis -n ${{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+      shell: bash
 
 
     - name: Configure 3rd Party Authentication
       run:  |-
         tutor config save --set OPENEDX_FACEBOOK_APP_ID="${{ secrets.FACEBOOK_APP_ID }}" \
                           --set OPENEDX_FACEBOOK_APP_SECRET="${{ secrets.FACEBOOK_APP_SECRET }}"
+      shell: bash
 
     # retrieve the MySQL connection parameters that we created in Terraform
     # and then stored in Kubernetes secrets. These include:
@@ -110,6 +115,7 @@ runs:
     - name: fetch MySQL configuration from Kubernetes secrets
       run: |-
         kubectl get secret mysql-root -n ${{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+      shell: bash
 
     #------------------------------------------------------------------------
     # II. Get all of our backend configuration data that was stored in
@@ -118,6 +124,7 @@ runs:
     - name: Configure Open edX version
       run: |-
         echo "${{ inputs.openedx-common-version }}=$${{ inputs.openedx-common-version }}" >> $GITHUB_ENV
+      shell: bash
 
     # retrieve the Open edX JWT token that we created with Terraform and
     # then stored in Kubernetes secrets
@@ -125,15 +132,18 @@ runs:
     - name: Fetch JWT token
       run: |-
         kubectl get secret jwt -n ${{ inputs.namespace }} -o json |  jq  '.data| map_values(@base64d)'  | jq -r 'keys[] as $k | "\(.[$k])"' > jwt_private_key
+      shell: bash
 
     - nam: Generate JWT private key
       run: |-
         export TUTOR_JWT_RSA_PRIVATE_KEY=\'$(sed -E 's/$/\n/g' ./jwt_private_key)\'
+      shell: bash
 
     - name: Generate Tutor Config
       run:  |-
         tutor config save
         cat $TUTOR_ROOT/config.yml
+      shell: bash
 
 
     # ---------------------------------------------------------------------------------
@@ -149,16 +159,19 @@ runs:
                           --set EMAIL_HOST_USER=${{ secrets.AWS_SES_IAM_KEY }} \
                           --set EMAIL_PORT=587 \
                           --set EMAIL_USE_TLS=true
+      shell: bash
 
     # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/kubernetes_secrets/main.tf
     - name: fetch EDX Secret Key from Kubernetes secrets
       run: |-
         kubectl get secret edx-secret-key -n ${{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+      shell: bash
 
     - name: Load environment specific settings (direct)
       run: |-
         # Pin the instalation ID with the Kubernetes ${{ inputs.namespace }}. It needs to be unique and static per instalation.
         cat ci/tutor-deploy/environments/$ENVIRONMENT_ID/config.yml >> $GITHUB_ENV
+      shell: bash
 
     # note that values like $LMS_HOSTNAME come from this repo
     # in /ci/tutor-deploy/environments/prod/config.yml
@@ -173,3 +186,4 @@ runs:
         echo "TUTOR_DOCKER_IMAGE_OPENEDX=$DOCKER_IMAGE_OPENEDX" >> $GITHUB_ENV
         echo "TUTOR_RUN_CADDY=false" >> $GITHUB_ENV
         echo "TUTOR_RUN_NGINX=false" >> $GITHUB_ENV
+      shell: bash
