--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugins/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugins/action.yml
@@ -58,6 +58,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+      uses: actions/checkout@v3.0.2
+
     - name: Enable Tutor Plugins
       if: ${{ inputs.tutor-enable-plugin-s3 }}
       uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin_s3
