--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugins/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugins/action.yml
@@ -61,6 +61,7 @@ runs:
     - name: Test boolean input
       if: ${{ inputs.tutor-enable-plugin-s3 }}
       run: echo "tutor-enable-plugin-s3 is GO"
+      shell: bash
 
     - name: Checkout
       uses: actions/checkout@v3.0.2
