--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery/action.yml
@@ -16,6 +16,8 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+      uses: actions/checkout@v3.0.2
 
     # retrieve the MySQL connection parameters that we created in Terraform
     # and then stored in Kubernetes secrets. These include:
