--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-mfe/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-mfe/action.yml
@@ -30,6 +30,9 @@ runs:
   env:
     DOCKER_IMAGE_MFE: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_mfe:latest
   steps:
+    - name: Checkout
+      uses: actions/checkout@v3.0.2
+
     - name: Enable the MFE plugin
       run: |-
         pip install tutor-mfe
