--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-notes/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-notes/action.yml
@@ -29,6 +29,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout
+      uses: actions/checkout@v3.0.2
+
     # retrieve the MySQL connection parameters that we created in Terraform
     # and then stored in Kubernetes secrets. These include:
     #   MYSQL_HOST: mysql.app.mrionline.com
