--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugins/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugins/action.yml
@@ -74,6 +74,12 @@ runs:
     - name: Checkout
       uses: actions/checkout@v3.0.2
 
+    - name: Test for true
+      if: ${{ inputs.tutor-enable-plugin-s3 == true }}
+      run: |-
+        echo "S3 is true"
+      shell: bash
+
     - name: Enable Tutor Plugins
       if: ${{ inputs.tutor-enable-plugin-s3 == true }}
       uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin_s3
